Add trained model artifacts and update notebooks
Added new trained model files, logs, and configuration for TPS-VGG-BiLSTM-CTC-Seed1111. Updated workspace_step1.ipynb, workspace_step2.ipynb, and workspace_step3.ipynb, likely to reflect changes or results from the new training run.

--- a/workspace_step2.ipynb
+++ b/workspace_step2.ipynb
@@ -33,22 +33,20 @@
     }
    ],
    "source": [
-    "%%bash\n",
-    "\n",
     "# Training data conversion from TRDG format to DTRB format\n",
-    "python TRDG2DTRB/convert.py \\\n",
+    "!python TRDG2DTRB/convert.py \\\n",
     "    --input_path \"workspace/step1/training\" \\\n",
     "    --output_path \"workspace/step2/training\"\n",
     "\n",
     "\n",
     "# Validation data conversion from TRDG format to DTRB format\n",
-    "python TRDG2DTRB/convert.py \\\n",
+    "!python TRDG2DTRB/convert.py \\\n",
     "    --input_path \"workspace/step1/validation\" \\\n",
     "    --output_path \"workspace/step2/validation\"\n",
     "\n",
     "\n",
     "# Test data conversion from TRDG format to DTRB format\n",
-    "python TRDG2DTRB/convert.py \\\n",
+    "!python TRDG2DTRB/convert.py \\\n",
     "    --input_path \"workspace/step1/test\" \\\n",
     "    --output_path \"workspace/step2/test\""
    ]
