--- a/workspace_step1.ipynb
+++ b/workspace_step1.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1cf95e4c",
+   "metadata": {},
+   "source": [
+    "## Install Dependencies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f1166f3",
