--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -591,6 +591,7 @@
    "source": [
     "# Install required packages\n",
     "%pip install lmdb pillow nltk natsort fire opencv-python\n",
+    "# For Nvidia GPU support\n",
     "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130"
    ]
   },
@@ -665,6 +666,14 @@
    "source": [
     "## 3.3 Download the pretrained model from Eazyocr\n",
     "https://jaided.ai/easyocr/modelhub/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c5199a8",
+   "metadata": {},
+   "source": [
+    "## 3.4 Train the model"
    ]
   },
   {
