--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -592,7 +592,9 @@
     "# Install required packages\n",
     "%pip install lmdb pillow nltk natsort fire opencv-python\n",
     "# For Nvidia GPU support\n",
-    "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130"
+    "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130\n",
+    "# If no GPU, use the following instead\n",
+    "# %pip install torch torchvision"
    ]
   },
   {
