--- a/workspace_step2.ipynb
+++ b/workspace_step2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d6f23a98",
    "metadata": {},
    "outputs": [
@@ -18,15 +18,157 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input path:  /Users/wing199901/Downloads/ocr/workspace/step1/training\n",
-      "output path:  /Users/wing199901/Downloads/ocr/workspace/step2/training\n",
+      "input path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step1\\training\n",
+      "output path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\training\n",
       "\n",
       "Output folder already exists.\n",
       "\n",
-      "So, delete all data of output folder [/Users/wing199901/Downloads/ocr/workspace/step2/training]\n",
+      "So, delete all data of output folder [c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\training]\n",
       "\n",
       "Total file count:  10000\n",
+      "\n",
+      "  100 / 10000 Processing !!\n",
+      "  200 / 10000 Processing !!\n",
+      "  300 / 10000 Processing !!\n",
+      "  400 / 10000 Processing !!\n",
+      "  500 / 10000 Processing !!\n",
+      "  600 / 10000 Processing !!\n",
+      "  700 / 10000 Processing !!\n",
+      "  800 / 10000 Processing !!\n",
+      "  900 / 10000 Processing !!\n",
+      " 1000 / 10000 Processing !!\n",
+      " 1100 / 10000 Processing !!\n",
+      " 1200 / 10000 Processing !!\n",
+      " 1300 / 10000 Processing !!\n",
+      " 1400 / 10000 Processing !!\n",
+      " 1500 / 10000 Processing !!\n",
+      " 1600 / 10000 Processing !!\n",
+      " 1700 / 10000 Processing !!\n",
+      " 1800 / 10000 Processing !!\n",
+      " 1900 / 10000 Processing !!\n",
+      " 2000 / 10000 Processing !!\n",
+      " 2100 / 10000 Processing !!\n",
+      " 2200 / 10000 Processing !!\n",
+      " 2300 / 10000 Processing !!\n",
+      " 2400 / 10000 Processing !!\n",
+      " 2500 / 10000 Processing !!\n",
+      " 2600 / 10000 Processing !!\n",
+      " 2700 / 10000 Processing !!\n",
+      " 2800 / 10000 Processing !!\n",
+      " 2900 / 10000 Processing !!\n",
+      " 3000 / 10000 Processing !!\n",
+      " 3100 / 10000 Processing !!\n",
+      " 3200 / 10000 Processing !!\n",
+      " 3300 / 10000 Processing !!\n",
+      " 3400 / 10000 Processing !!\n",
+      " 3500 / 10000 Processing !!\n",
+      " 3600 / 10000 Processing !!\n",
+      " 3700 / 10000 Processing !!\n",
+      " 3800 / 10000 Processing !!\n",
+      " 3900 / 10000 Processing !!\n",
+      " 4000 / 10000 Processing !!\n",
+      " 4100 / 10000 Processing !!\n",
+      " 4200 / 10000 Processing !!\n",
+      " 4300 / 10000 Processing !!\n",
+      " 4400 / 10000 Processing !!\n",
+      " 4500 / 10000 Processing !!\n",
+      " 4600 / 10000 Processing !!\n",
+      " 4700 / 10000 Processing !!\n",
+      " 4800 / 10000 Processing !!\n",
+      " 4900 / 10000 Processing !!\n",
+      " 5000 / 10000 Processing !!\n",
+      " 5100 / 10000 Processing !!\n",
+      " 5200 / 10000 Processing !!\n",
+      " 5300 / 10000 Processing !!\n",
+      " 5400 / 10000 Processing !!\n",
+      " 5500 / 10000 Processing !!\n",
+      " 5600 / 10000 Processing !!\n",
+      " 5700 / 10000 Processing !!\n",
+      " 5800 / 10000 Processing !!\n",
+      " 5900 / 10000 Processing !!\n",
+      " 6000 / 10000 Processing !!\n",
+      " 6100 / 10000 Processing !!\n",
+      " 6200 / 10000 Processing !!\n",
+      " 6300 / 10000 Processing !!\n",
+      " 6400 / 10000 Processing !!\n",
+      " 6500 / 10000 Processing !!\n",
+      " 6600 / 10000 Processing !!\n",
+      " 6700 / 10000 Processing !!\n",
+      " 6800 / 10000 Processing !!\n",
+      " 6900 / 10000 Processing !!\n",
+      " 7000 / 10000 Processing !!\n",
+      " 7100 / 10000 Processing !!\n",
+      " 7200 / 10000 Processing !!\n",
+      " 7300 / 10000 Processing !!\n",
+      " 7400 / 10000 Processing !!\n",
+      " 7500 / 10000 Processing !!\n",
+      " 7600 / 10000 Processing !!\n",
+      " 7700 / 10000 Processing !!\n",
+      " 7800 / 10000 Processing !!\n",
+      " 7900 / 10000 Processing !!\n",
+      " 8000 / 10000 Processing !!\n",
+      " 8100 / 10000 Processing !!\n",
+      " 8200 / 10000 Processing !!\n",
+      " 8300 / 10000 Processing !!\n",
+      " 8400 / 10000 Processing !!\n",
+      " 8500 / 10000 Processing !!\n",
+      " 8600 / 10000 Processing !!\n",
+      " 8700 / 10000 Processing !!\n",
+      " 8800 / 10000 Processing !!\n",
+      " 8900 / 10000 Processing !!\n",
+      " 9000 / 10000 Processing !!\n",
+      " 9100 / 10000 Processing !!\n",
+      " 9200 / 10000 Processing !!\n",
+      " 9300 / 10000 Processing !!\n",
+      " 9400 / 10000 Processing !!\n",
+      " 9500 / 10000 Processing !!\n",
+      " 9600 / 10000 Processing !!\n",
+      " 9700 / 10000 Processing !!\n",
+      " 9800 / 10000 Processing !!\n",
+      " 9900 / 10000 Processing !!\n",
       "10000 / 10000 Processing !!\n",
+      "Conversion complete!\n",
+      "\n",
+      "input path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step1\\validation\n",
+      "output path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\validation\n",
+      "\n",
+      "Output folder already exists.\n",
+      "\n",
+      "So, delete all data of output folder [c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\validation]\n",
+      "\n",
+      "Total file count:  1000\n",
+      "\n",
+      " 100 / 1000 Processing !!\n",
+      " 200 / 1000 Processing !!\n",
+      " 300 / 1000 Processing !!\n",
+      " 400 / 1000 Processing !!\n",
+      " 500 / 1000 Processing !!\n",
+      " 600 / 1000 Processing !!\n",
+      " 700 / 1000 Processing !!\n",
+      " 800 / 1000 Processing !!\n",
+      " 900 / 1000 Processing !!\n",
+      "1000 / 1000 Processing !!\n",
+      "Conversion complete!\n",
+      "\n",
+      "input path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step1\\test\n",
+      "output path:  c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\test\n",
+      "\n",
+      "Output folder already exists.\n",
+      "\n",
+      "So, delete all data of output folder [c:\\Users\\user\\Downloads\\ocr-workspace\\dataset\\step2\\test]\n",
+      "\n",
+      "Total file count:  1000\n",
+      "\n",
+      " 100 / 1000 Processing !!\n",
+      " 200 / 1000 Processing !!\n",
+      " 300 / 1000 Processing !!\n",
+      " 400 / 1000 Processing !!\n",
+      " 500 / 1000 Processing !!\n",
+      " 600 / 1000 Processing !!\n",
+      " 700 / 1000 Processing !!\n",
+      " 800 / 1000 Processing !!\n",
+      " 900 / 1000 Processing !!\n",
+      "1000 / 1000 Processing !!\n",
       "Conversion complete!\n",
       "\n"
      ]
