--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "a9e0f6a6",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
       "dataset_root:    dataset/step3/validation\t dataset: /\n",
       "sub-directory:\t/.\t num samples: 1000\n",
       "--------------------------------------------------------------------------------\n",
-      "model input parameters 32 100 20 1 512 512 5382 25 TPS ResNet BiLSTM Attn\n",
+      "model input parameters 32 100 20 1 512 512 5381 25 TPS ResNet BiLSTM CTC\n",
       "Skip Transformation.LocalizationNetwork.localization_fc2.weight as it is already initialized\n",
       "Skip Transformation.LocalizationNetwork.localization_fc2.bias as it is already initialized\n",
       "loading pretrained model from pre_trained_models/chinese.pth\n",
@@ -376,18 +376,10 @@
       "        (linear): Linear(in_features=1024, out_features=512, bias=True)\n",
       "      )\n",
       "    )\n",
-      "    (Prediction): Attention(\n",
-      "      (attention_cell): AttentionCell(\n",
-      "        (i2h): Linear(in_features=512, out_features=512, bias=False)\n",
-      "        (h2h): Linear(in_features=512, out_features=512, bias=True)\n",
-      "        (score): Linear(in_features=512, out_features=1, bias=False)\n",
-      "        (rnn): LSTMCell(5894, 512)\n",
-      "      )\n",
-      "      (generator): Linear(in_features=512, out_features=5382, bias=True)\n",
-      "    )\n",
+      "    (Prediction): Linear(in_features=512, out_features=5381, bias=True)\n",
       "  )\n",
       ")\n",
-      "Trainable params num :  71820750\n",
+      "Trainable params num :  58171341\n",
       "Optimizer:\n",
       "Adam (\n",
       "Parameter Group 0\n",
@@ -404,13 +396,13 @@
       "    weight_decay: 0\n",
       ")\n",
       "------------ Options -------------\n",
-      "exp_name: TPS-ResNet-BiLSTM-Attn-Seed1111\n",
+      "exp_name: TPS-ResNet-BiLSTM-CTC-Seed1111\n",
       "train_data: dataset/step3/training\n",
       "valid_data: dataset/step3/validation\n",
       "manualSeed: 1111\n",
       "workers: 0\n",
       "batch_size: 192\n",
-      "num_iter: 10000\n",
+      "num_iter: 1000\n",
       "valInterval: 1000\n",
       "saved_model: pre_trained_models/chinese.pth\n",
       "FT: True\n",
@@ -435,146 +427,38 @@
       "Transformation: TPS\n",
       "FeatureExtraction: ResNet\n",
       "SequenceModeling: BiLSTM\n",
-      "Prediction: Attn\n",
+      "Prediction: CTC\n",
       "num_fiducial: 20\n",
       "input_channel: 1\n",
       "output_channel: 512\n",
       "hidden_size: 512\n",
       "num_gpu: 1\n",
-      "num_class: 5382\n",
+      "num_class: 5381\n",
       "---------------------------------------\n",
       "\n",
-      "[1/10000] Train loss: 8.70103, Valid loss: 7.96989, Elapsed_time: 2.81116\n",
-      "Current_accuracy : 0.000, Current_norm_ED  : 0.09\n",
-      "Best_accuracy    : 0.000, Best_norm_ED     : 0.09\n",
+      "[1/1000] Train loss: 15.89200, Valid loss: 8.05366, Elapsed_time: 2.92371\n",
+      "Current_accuracy : 0.000, Current_norm_ED  : 0.03\n",
+      "Best_accuracy    : 0.000, Best_norm_ED     : 0.03\n",
       "--------------------------------------------------------------------------------\n",
       "Ground Truth              | Prediction                | Confidence Score & T/F\n",
       "--------------------------------------------------------------------------------\n",
-      "屈臣氏 書籍 1 本 hk35           |                           | 0.0000\tFalse\n",
-      "日期 20250214 時間 1800       | 妍妍帥帥垚垚垚垚垚垚垚垚垚垚垚垚垚垚垚垚垚垚垚姊垚 | 0.0000\tFalse\n",
-      "大家樂 麵包 2 包 hk50           |                           | 0.0000\tFalse\n",
-      "美廉社 衣服 1 件 hk300          |                           | 0.0000\tFalse\n",
-      "品項 洗衣粉 1 袋 單價 25          |                           | 0.0000\tFalse\n",
+      "aeon 飯糰 2 個 hk800         | ioomk                     | 0.0000\tFalse\n",
+      "付款方式 mastercard           |  oin                      | 0.0000\tFalse\n",
+      "總數 hk35 折扣 hk10           | fislun                    | 0.0000\tFalse\n",
+      "消費 hk60 積分 76 分           | 5)                        | 0.0000\tFalse\n",
+      "發票號碼 ab-12345678          | iioiilin                  | 0.0000\tFalse\n",
       "--------------------------------------------------------------------------------\n",
-      "[1000/10000] Train loss: 0.92432, Valid loss: 0.37187, Elapsed_time: 227.10266\n",
-      "Current_accuracy : 80.700, Current_norm_ED  : 0.98\n",
-      "Best_accuracy    : 80.700, Best_norm_ED     : 0.98\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "日期 03112024 時間 0730       | 日期 03112024 時間 0730       | 0.2674\tTrue\n",
-      "消費 20 積分 70 分             | 消費 20 積分 70 分             | 0.4916\tTrue\n",
-      "消費 hk500 積分 53 分          | 消費 hk500 積分 56 分          | 0.1053\tFalse\n",
-      "餐廳 漢堡包 套餐 30              | 餐廳 漢堡包 套餐 30              | 0.6192\tTrue\n",
-      "消費 15 積分 11 分             | 消費 15 積分 11 分             | 0.6885\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[2000/10000] Train loss: 0.02945, Valid loss: 0.01943, Elapsed_time: 448.71798\n",
-      "Current_accuracy : 99.300, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 99.300, Best_norm_ED     : 1.00\n",
+      "[1000/1000] Train loss: 0.10125, Valid loss: 0.00217, Elapsed_time: 183.17428\n",
+      "Current_accuracy : 99.400, Current_norm_ED  : 1.00\n",
+      "Best_accuracy    : 99.400, Best_norm_ED     : 1.00\n",
       "--------------------------------------------------------------------------------\n",
       "Ground Truth              | Prediction                | Confidence Score & T/F\n",
       "--------------------------------------------------------------------------------\n",
-      "發票號碼 eps-98765432         | 發票號碼 eps-98765432         | 0.9464\tTrue\n",
-      "發票號碼 eps-98765432         | 發票號碼 eps-98765432         | 0.9455\tTrue\n",
-      "太平洋崇光百貨 漢堡包 套餐 hk400      | 太平洋崇光百貨 漢堡包 套餐 hk400      | 0.8837\tTrue\n",
-      "家樂福 香煙 1 包 hk55           | 家樂福 香煙 1 包 hk55           | 0.9174\tTrue\n",
-      "品項 洗髮精 1 瓶 單價 15          | 品項 洗髮精 1 瓶 單價 15          | 0.9675\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[3000/10000] Train loss: 0.01386, Valid loss: 0.00912, Elapsed_time: 671.76861\n",
-      "Current_accuracy : 99.600, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 99.600, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "m goi saai                | m goi saai                | 0.9655\tTrue\n",
-      "家樂福 礦泉水 6 瓶 hk45          | 家樂福 礦泉水 6 瓶 hk45          | 0.9619\tTrue\n",
-      "消費 15 積分 70 分             | 消費 15 積分 70 分             | 0.9525\tTrue\n",
-      "太平洋崇光百貨 飯糰 2 個 hk150      | 太平洋崇光百貨 飯糰 2 個 hk150      | 0.9508\tTrue\n",
-      "惠康 牛奶 1 公升 hk10           | 惠康 牛奶 1 公升 hk10           | 0.9631\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[4000/10000] Train loss: 0.01093, Valid loss: 0.02686, Elapsed_time: 901.10699\n",
-      "Current_accuracy : 99.300, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 99.600, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "總額 hk50 折扣 hk10           | 總額 hk50 折扣 hk10           | 0.9298\tTrue\n",
-      "日期 20250420 時間 2045       | 日期 20250420 時間 2045       | 0.9824\tTrue\n",
-      "品項 蔬果 蘋果 5 個 單價 hk40      | 品項 蔬果 蘋果 5 個 單價 hk40      | 0.9468\tTrue\n",
-      "品項 炸雞 6 塊 單價 hk80         | 品項 炸雞 6 塊 單價 hk80         | 0.9889\tTrue\n",
-      "付款方式 信用卡                  | 付款方式 信用卡                  | 0.9926\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[5000/10000] Train loss: 0.00223, Valid loss: 0.00041, Elapsed_time: 1128.13059\n",
-      "Current_accuracy : 100.000, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "日期 20250420 時間 2045       | 日期 20250420 時間 2045       | 0.9977\tTrue\n",
-      "消費總額 20 優惠 hk5            | 消費總額 20 優惠 hk5            | 0.9973\tTrue\n",
-      "m goi saai                | m goi saai                | 0.9969\tTrue\n",
-      "消費 hk55 積分 11 分           | 消費 hk55 積分 11 分           | 0.9971\tTrue\n",
-      "總計 hk100 稅金 hk0           | 總計 hk100 稅金 hk0           | 0.9985\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[6000/10000] Train loss: 0.00188, Valid loss: 0.00030, Elapsed_time: 1355.12628\n",
-      "Current_accuracy : 100.000, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "發票號碼 inv-001234           | 發票號碼 inv-001234           | 0.9969\tTrue\n",
-      "品項 快餐 單價 hk120            | 品項 快餐 單價 hk120            | 0.9959\tTrue\n",
-      "感謝您的光臨                    | 感謝您的光臨                    | 0.9995\tTrue\n",
-      "消費 hk600 積分 65 分          | 消費 hk600 積分 65 分          | 0.9900\tTrue\n",
-      "品項 燒臘飯 叉燒 單價 10           | 品項 燒臘飯 叉燒 單價 10           | 0.9974\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[7000/10000] Train loss: 0.00165, Valid loss: 0.45871, Elapsed_time: 1576.99358\n",
-      "Current_accuracy : 83.400, Current_norm_ED  : 0.97\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "品項 洗衣粉 1 袋 單價 25          | 品項 衣服 1 袋 單價 25           | 0.3036\tFalse\n",
-      "發票號碼 inv-001234           | 發票號碼 i-v-2345678          | 0.0403\tFalse\n",
-      "taste 紀念品 hk120           | taste 紀念品 hk220           | 0.1225\tFalse\n",
-      "付款方式 visa 卡               | 付款方式 visa 卡               | 0.8543\tTrue\n",
-      "付款方式 fps                  | 付款方式 fps                  | 0.9963\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[8000/10000] Train loss: 0.00582, Valid loss: 0.00967, Elapsed_time: 1797.62465\n",
-      "Current_accuracy : 99.000, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "小計 hk600 優惠 hk5           | 小計 hk600 優惠 hk5           | 0.9905\tTrue\n",
-      "總數 hk120 稅金 hk0           | 總數 hk120 稅金 hk0           | 0.9325\tTrue\n",
-      "消費 hk40 積分 49 分           | 消費 hk40 積分 49 分           | 0.9843\tTrue\n",
-      "消費 30 積分 53 分             | 消費 30 積分 53 分             | 0.9950\tTrue\n",
-      "總額 hk10 會員折扣 hk20         | 總額 hk10 會員折扣 hk20         | 0.9832\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[9000/10000] Train loss: 0.00053, Valid loss: 0.00012, Elapsed_time: 2016.12791\n",
-      "Current_accuracy : 100.000, Current_norm_ED  : 1.00\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "太平洋崇光百貨 衣服 1 件 hk35       | 太平洋崇光百貨 衣服 1 件 hk35       | 0.9975\tTrue\n",
-      "星巴克 咖啡 1 杯 hk150          | 星巴克 咖啡 1 杯 hk150          | 0.9994\tTrue\n",
-      "日期 20241103 物品 咖啡 1 杯     | 日期 20241103 物品 咖啡 1 杯     | 0.9705\tTrue\n",
-      "總計 hk400 稅金 hk0           | 總計 hk400 稅金 hk0           | 0.9997\tTrue\n",
-      "消費 hk40 積分 49 分           | 消費 hk40 積分 49 分           | 0.9992\tTrue\n",
-      "--------------------------------------------------------------------------------\n",
-      "[10000/10000] Train loss: 0.00119, Valid loss: 0.23689, Elapsed_time: 2235.88374\n",
-      "Current_accuracy : 93.400, Current_norm_ED  : 0.99\n",
-      "Best_accuracy    : 100.000, Best_norm_ED     : 1.00\n",
-      "--------------------------------------------------------------------------------\n",
-      "Ground Truth              | Prediction                | Confidence Score & T/F\n",
-      "--------------------------------------------------------------------------------\n",
-      "總數 hk100 稅金 hk0 免稅        | 總數 hk100 稅金 hk0 免稅        | 0.8053\tTrue\n",
-      "日期 20250308 時間 2215       | 日期期 20250308 時間 2215      | 0.1255\tFalse\n",
-      "品項 洗衣粉 1 袋 單價 10          | 品項 洗衣粉 1 袋 單價 10          | 0.9973\tTrue\n",
-      "m goi saai                | m goi saai                | 0.9930\tTrue\n",
-      "品項 飯糰 2 個 單價 hk400        | 品項 飯糰 2 個 單價 hk400        | 0.9984\tTrue\n",
+      "日期 03112024 時間 0730       | 日期 03112024 時間 0730       | 0.7917\tTrue\n",
+      "歡迎再來                      | 歡迎再來                      | 0.9586\tTrue\n",
+      "感謝您的光臨                    | 感謝您的光臨                    | 0.9016\tTrue\n",
+      "感謝您的光臨                    | 感謝您的光臨                    | 0.7366\tTrue\n",
+      "發票號碼 eps-98765432         | 發票號碼 eps-98765432         | 0.8189\tTrue\n",
       "--------------------------------------------------------------------------------\n",
       "end the training\n"
      ]
@@ -592,18 +476,39 @@
     "    --Transformation \"TPS\" \\\n",
     "    --FeatureExtraction \"ResNet\" \\\n",
     "    --SequenceModeling \"BiLSTM\" \\\n",
-    "    --Prediction \"Attn\" \\\n",
+    "    --Prediction \"CTC\" \\\n",
     "    --input_channel 1 \\\n",
     "    --output_channel 512 \\\n",
     "    --hidden_size 512 \\\n",
     "    --saved_model \"pre_trained_models/chinese.pth\" \\\n",
     "    --FT \\\n",
     "    --workers 0 \\\n",
-    "    --num_iter 10000 \\\n",
+    "    --num_iter 1000 \\\n",
     "    --lr 0.0005 \\\n",
     "    --valInterval 1000 \\\n",
-    "    --adam \\\n",
-    "    --character \"$(),-./0123456789:ABCEFGHIJKLMNOPRSTUVWYacdeghiklmnoprstuy一中乾亞付件佳使來便信個價優光克免八公具再冰分利力勞包升卡叉合吉名咖品員商啡啤單堡場塊士多大太套奶宜家富寧對小尼居屈崇巧巴市平店康廉廳式張快念您惠感手扣找折拿捲支數料方日星時書會服期本杯果桌條樂機款歡殼氏水池泉洋洗消淇淋混港漢炸無煙熱燈燒爾片牙牛物狗獎玩現瓶生用當發百的盒碗碼礦社票福稅積籍米粉精糰紀紅紙級統維總罐美耳肉膏膜臘臣臨船茶菜萊萬蔬蕉蘋號衛衣袋計謝貨買費購超迎迪送通遊道達酒野金鐵門間限雞零電面項顆額顧飯飲餅餐餘香髮麥麵﻿\" \n"
+    "    --adam \n",
+    "    # --character \"$(),-./0123456789:ABCEFGHIJKLMNOPRSTUVWYacdeghiklmnoprstuy一中乾亞付件佳使來便信個價優光克免八公具再冰分利力勞包升卡叉合吉名咖品員商啡啤單堡場塊士多大太套奶宜家富寧對小尼居屈崇巧巴市平店康廉廳式張快念您惠感手扣找折拿捲支數料方日星時書會服期本杯果桌條樂機款歡殼氏水池泉洋洗消淇淋混港漢炸無煙熱燈燒爾片牙牛物狗獎玩現瓶生用當發百的盒碗碼礦社票福稅積籍米粉精糰紀紅紙級統維總罐美耳肉膏膜臘臣臨船茶菜萊萬蔬蕉蘋號衛衣袋計謝貨買費購超迎迪送通遊道達酒野金鐵門間限雞零電面項顆額顧飯飲餅餐餘香髮麥麵﻿\" \n",
+    "\n",
+    "# !python deep-text-recognition-benchmark/train.py \\\n",
+    "#     --train_data \"dataset/step3/training\" \\\n",
+    "#     --valid_data \"dataset/step3/validation\" \\\n",
+    "#     --select_data / \\\n",
+    "#     --batch_ratio 1 \\\n",
+    "#     --Transformation \"TPS\" \\\n",
+    "#     --FeatureExtraction \"VGG\" \\\n",
+    "#     --SequenceModeling \"BiLSTM\" \\\n",
+    "#     --Prediction \"CTC\" \\\n",
+    "#     --input_channel 1 \\\n",
+    "#     --output_channel 512 \\\n",
+    "#     --hidden_size 512 \\\n",
+    "#     --saved_model \"pre_trained_models/chinese.pth\" \\\n",
+    "#     --FT \\\n",
+    "#     --workers 0 \\\n",
+    "#     --num_iter 10 \\\n",
+    "#     --lr 0.0001 \\\n",
+    "#     --valInterval 1000 \\\n",
+    "#     --adam \\\n",
+    "#     --character \"$(),-./0123456789:ABCEFGHIJKLMNOPRSTUVWYacdeghiklmnoprstuy一中乾亞付件佳使來便信個價優光克免八公具再冰分利力勞包升卡叉合吉名咖品員商啡啤單堡場塊士多大太套奶宜家富寧對小尼居屈崇巧巴市平店康廉廳式張快念您惠感手扣找折拿捲支數料方日星時書會服期本杯果桌條樂機款歡殼氏水池泉洋洗消淇淋混港漢炸無煙熱燈燒爾片牙牛物狗獎玩現瓶生用當發百的盒碗碼礦社票福稅積籍米粉精糰紀紅紙級統維總罐美耳肉膏膜臘臣臨船茶菜萊萬蔬蕉蘋號衛衣袋計謝貨買費購超迎迪送通遊道達酒野金鐵門間限雞零電面項顆額顧飯飲餅餐餘香髮麥麵﻿\" \n"
    ]
   }
  ],
