Add dataset generation and processing notebook
Added dataset_gen.ipynb for generating and converting synthetic text recognition datasets using TRDG and DTRB formats. Updated .gitignore to exclude .venv and .ipynb_checkpoints. Updated submodules TextRecognitionDataGenerator and deep-text-recognition-benchmark. Added new saved model and log files for TPS-VGG-BiLSTM-CTC. Modified workspace_step3.ipynb and workspace_step4.ipynb with related changes.

--- a/workspace_step4.ipynb
+++ b/workspace_step4.ipynb
@@ -32,18 +32,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ec700ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied saved_models\\TPS-VGG-BiLSTM-CTC-Seed1111-20251119-024440\\best_accuracy.pth -> user_network_dir\\custom.pth\n"
+     ]
+    }
+   ],
    "source": [
+    "from pathlib import Path\n",
+    "import shutil\n",
+    "\n",
     "# Create the user network directory if it doesn't exist\n",
-    "!mkdir -p ./user_network_dir\n",
+    "user_network_dir = Path(\"./user_network_dir\")\n",
+    "user_network_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Copy your trained model to the user network directory\n",
-    "# ⚠️ IMPORTANT: Change the date folder name to match your training run\n",
-    "# The folder name format is: TPS-VGG-BiLSTM-CTC-Seed1111-YYYYMMDD\n",
-    "!cp ./saved_models/TPS-VGG-BiLSTM-CTC-Seed1111-20251019/best_accuracy.pth ./user_network_dir/custom.pth"
+    "# ⚠️ IMPORTANT: Change the folder name below to match your training run\n",
+    "source_model = Path(\"./saved_models/TPS-VGG-BiLSTM-CTC-Seed1111-20251119-024440/best_accuracy.pth\")\n",
+    "target_model = user_network_dir / \"custom.pth\"\n",
+    "\n",
+    "if not source_model.exists():\n",
+    "    raise FileNotFoundError(f\"Expected trained model at {source_model} but it was not found.\")\n",
+    "\n",
+    "shutil.copy2(source_model, target_model)\n",
+    "print(f\"Copied {source_model} -> {target_model}\")"
    ]
   },
   {
@@ -75,10 +93,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "92391c41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting easyocr\n",
+      "  Downloading easyocr-1.7.2-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: torch in ./.venv-wsl/lib/python3.12/site-packages (from easyocr) (2.9.1+cu130)\n",
+      "Requirement already satisfied: torchvision>=0.5 in ./.venv-wsl/lib/python3.12/site-packages (from easyocr) (0.24.1+cu130)\n",
+      "Collecting opencv-python-headless (from easyocr)\n",
+      "  Downloading opencv_python_headless-4.12.0.88-cp37-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (19 kB)\n",
+      "Collecting scipy (from easyocr)\n",
+      "  Downloading scipy-1.16.3-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (62 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.0/62.0 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy in ./.venv-wsl/lib/python3.12/site-packages (from easyocr) (1.26.4)\n",
+      "Requirement already satisfied: Pillow in ./.venv-wsl/lib/python3.12/site-packages (from easyocr) (11.3.0)\n",
+      "Collecting scikit-image (from easyocr)\n",
+      "  Downloading scikit_image-0.25.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (14 kB)\n",
+      "Collecting python-bidi (from easyocr)\n",
+      "  Downloading python_bidi-0.6.7-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.9 kB)\n",
+      "Requirement already satisfied: PyYAML in ./.venv-wsl/lib/python3.12/site-packages (from easyocr) (6.0.3)\n",
+      "Collecting Shapely (from easyocr)\n",
+      "  Downloading shapely-2.1.2-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (6.8 kB)\n",
+      "Collecting pyclipper (from easyocr)\n",
+      "  Downloading pyclipper-1.3.0.post6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (9.0 kB)\n",
+      "Collecting ninja (from easyocr)\n",
+      "  Downloading ninja-1.13.0-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: filelock in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (3.19.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (4.15.0)\n",
+      "Requirement already satisfied: setuptools in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (80.9.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (1.14.0)\n",
+      "Requirement already satisfied: networkx>=2.5.1 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (3.5)\n",
+      "Requirement already satisfied: jinja2 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (3.1.6)\n",
+      "Requirement already satisfied: fsspec>=0.8.5 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (2025.9.0)\n",
+      "Requirement already satisfied: nvidia-cuda-nvrtc==13.0.48 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.48)\n",
+      "Requirement already satisfied: nvidia-cuda-runtime==13.0.48 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.48)\n",
+      "Requirement already satisfied: nvidia-cuda-cupti==13.0.48 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.48)\n",
+      "Requirement already satisfied: nvidia-cudnn-cu13==9.13.0.50 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (9.13.0.50)\n",
+      "Requirement already satisfied: nvidia-cublas==13.0.0.19 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.0.19)\n",
+      "Requirement already satisfied: nvidia-cufft==12.0.0.15 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (12.0.0.15)\n",
+      "Requirement already satisfied: nvidia-curand==10.4.0.35 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (10.4.0.35)\n",
+      "Requirement already satisfied: nvidia-cusolver==12.0.3.29 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (12.0.3.29)\n",
+      "Requirement already satisfied: nvidia-cusparse==12.6.2.49 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (12.6.2.49)\n",
+      "Requirement already satisfied: nvidia-cusparselt-cu13==0.8.0 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (0.8.0)\n",
+      "Requirement already satisfied: nvidia-nccl-cu13==2.27.7 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (2.27.7)\n",
+      "Requirement already satisfied: nvidia-nvshmem-cu13==3.3.24 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (3.3.24)\n",
+      "Requirement already satisfied: nvidia-nvtx==13.0.39 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.39)\n",
+      "Requirement already satisfied: nvidia-nvjitlink==13.0.39 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (13.0.39)\n",
+      "Requirement already satisfied: nvidia-cufile==1.15.0.42 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (1.15.0.42)\n",
+      "Requirement already satisfied: triton==3.5.1 in ./.venv-wsl/lib/python3.12/site-packages (from torch->easyocr) (3.5.1)\n",
+      "Collecting numpy (from easyocr)\n",
+      "  Using cached numpy-2.2.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+      "Collecting imageio!=2.35.0,>=2.33 (from scikit-image->easyocr)\n",
+      "  Downloading imageio-2.37.2-py3-none-any.whl.metadata (9.7 kB)\n",
+      "Collecting tifffile>=2022.8.12 (from scikit-image->easyocr)\n",
+      "  Downloading tifffile-2025.10.16-py3-none-any.whl.metadata (31 kB)\n",
+      "Requirement already satisfied: packaging>=21 in ./.venv-wsl/lib/python3.12/site-packages (from scikit-image->easyocr) (25.0)\n",
+      "Collecting lazy-loader>=0.4 (from scikit-image->easyocr)\n",
+      "  Downloading lazy_loader-0.4-py3-none-any.whl.metadata (7.6 kB)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./.venv-wsl/lib/python3.12/site-packages (from sympy>=1.13.3->torch->easyocr) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv-wsl/lib/python3.12/site-packages (from jinja2->torch->easyocr) (2.1.5)\n",
+      "Downloading easyocr-1.7.2-py3-none-any.whl (2.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m77.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading ninja-1.13.0-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (180 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m180.7/180.7 kB\u001b[0m \u001b[31m31.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading opencv_python_headless-4.12.0.88-cp37-abi3-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (54.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m54.0/54.0 MB\u001b[0m \u001b[31m52.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hUsing cached numpy-2.2.6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.5 MB)\n",
+      "Downloading pyclipper-1.3.0.post6-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (963 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m963.8/963.8 kB\u001b[0m \u001b[31m62.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading python_bidi-0.6.7-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (300 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m300.6/300.6 kB\u001b[0m \u001b[31m40.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading scikit_image-0.25.2-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (15.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m15.0/15.0 MB\u001b[0m \u001b[31m62.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0mm00:01\u001b[0m\n",
+      "\u001b[?25hDownloading scipy-1.16.3-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (35.7 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m35.7/35.7 MB\u001b[0m \u001b[31m64.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hDownloading shapely-2.1.2-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (3.1 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m84.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading imageio-2.37.2-py3-none-any.whl (317 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.6/317.6 kB\u001b[0m \u001b[31m41.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading lazy_loader-0.4-py3-none-any.whl (12 kB)\n",
+      "Downloading tifffile-2025.10.16-py3-none-any.whl (231 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m231.2/231.2 kB\u001b[0m \u001b[31m32.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: python-bidi, pyclipper, numpy, ninja, lazy-loader, tifffile, Shapely, scipy, opencv-python-headless, imageio, scikit-image, easyocr\n",
+      "  Attempting uninstall: numpy\n",
+      "    Found existing installation: numpy 1.26.4\n",
+      "    Uninstalling numpy-1.26.4:\n",
+      "      Successfully uninstalled numpy-1.26.4\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "label-studio 1.21.0 requires numpy<2.0.0,>=1.26.4, but you have numpy 2.2.6 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mSuccessfully installed Shapely-2.1.2 easyocr-1.7.2 imageio-2.37.2 lazy-loader-0.4 ninja-1.13.0 numpy-2.2.6 opencv-python-headless-4.12.0.88 pyclipper-1.3.0.post6 python-bidi-0.6.7 scikit-image-0.25.2 scipy-1.16.3 tifffile-2025.10.16\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install easyocr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "7f96a4d4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading detection model, please wait. This may take several minutes depending upon your network connection.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading EasyOCR pre-trained model...\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading recognition model, please wait. This may take several minutes depending upon your network connection.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "======================================================================\n",
+      "TESTING WITH EASYOCR PRE-TRAINED MODEL (Baseline)\n",
+      "======================================================================\n",
+      "\n",
+      "filename: 'demo_image_01.jpg', confidence: 0.5216, string: '九龍青衣細山路2號美景花園平臺72號舖'\n"
+     ]
+    }
+   ],
    "source": [
     "from easyocr import Reader\n",
     "import os\n",
@@ -123,10 +280,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "157d3186",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading your custom trained model...\n",
+      "\n",
+      "======================================================================\n",
+      "TESTING WITH YOUR CUSTOM MODEL\n",
+      "======================================================================\n",
+      "\n",
+      "filename: 'demo_image_01.jpg', confidence: 0.0356, string: 't  l $謳'\n"
+     ]
+    }
+   ],
    "source": [
     "from easyocr import Reader\n",
     "import os\n",
@@ -174,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "6ee1a92c",
    "metadata": {},
    "outputs": [
@@ -191,23 +362,13 @@
       "📷 Testing: demo_image_01.jpg\n",
       "--------------------------------------------------------------------------------\n",
       "🔵 EasyOCR Pre-trained Model:\n",
-      "   confidence: 0.0146, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n",
+      "   confidence: 0.0148, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n",
       "\n",
       "🟢 Your Custom Model:\n",
-      "   confidence: 0.1838, string: '果'\n",
+      "   confidence: 0.0356, string: 't  l $謳'\n",
       "\n",
       "================================================================================\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
-      "/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n"
      ]
     }
    ],
@@ -263,11 +424,19 @@
     "    \n",
     "    print(f\"\\n{'='*80}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70222ab0-392d-4cac-aa28-9a4e8882df84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
