--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6c8f598f",
    "metadata": {},
    "outputs": [
@@ -35,57 +35,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting lmdb\n",
-      "  Using cached lmdb-1.7.5-cp312-cp312-macosx_11_0_arm64.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: pillow in ./.venv/lib/python3.12/site-packages (12.0.0)\n",
-      "Collecting nltk\n",
-      "  Using cached nltk-3.9.2-py3-none-any.whl.metadata (3.2 kB)\n",
-      "Collecting natsort\n",
-      "  Using cached natsort-8.4.0-py3-none-any.whl.metadata (21 kB)\n",
-      "Collecting fire\n",
-      "  Using cached fire-0.7.1-py3-none-any.whl.metadata (5.8 kB)\n",
-      "Collecting opencv-python\n",
-      "  Using cached opencv_python-4.12.0.88-cp37-abi3-macosx_13_0_arm64.whl.metadata (19 kB)\n",
-      "Requirement already satisfied: click in ./.venv/lib/python3.12/site-packages (from nltk) (8.3.1)\n",
-      "Collecting joblib (from nltk)\n",
-      "  Using cached joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting regex>=2021.8.3 (from nltk)\n",
-      "  Downloading regex-2025.11.3-cp312-cp312-macosx_11_0_arm64.whl.metadata (40 kB)\n",
-      "Requirement already satisfied: tqdm in ./.venv/lib/python3.12/site-packages (from nltk) (4.67.1)\n",
-      "Collecting termcolor (from fire)\n",
-      "  Downloading termcolor-3.2.0-py3-none-any.whl.metadata (6.4 kB)\n",
-      "Requirement already satisfied: numpy<2.3.0,>=2 in ./.venv/lib/python3.12/site-packages (from opencv-python) (2.2.6)\n",
-      "Using cached lmdb-1.7.5-cp312-cp312-macosx_11_0_arm64.whl (99 kB)\n",
-      "Using cached nltk-3.9.2-py3-none-any.whl (1.5 MB)\n",
-      "Using cached natsort-8.4.0-py3-none-any.whl (38 kB)\n",
-      "Using cached fire-0.7.1-py3-none-any.whl (115 kB)\n",
-      "Using cached opencv_python-4.12.0.88-cp37-abi3-macosx_13_0_arm64.whl (37.9 MB)\n",
-      "Downloading regex-2025.11.3-cp312-cp312-macosx_11_0_arm64.whl (288 kB)\n",
-      "Using cached joblib-1.5.2-py3-none-any.whl (308 kB)\n",
-      "Downloading termcolor-3.2.0-py3-none-any.whl (7.7 kB)\n",
-      "Installing collected packages: lmdb, termcolor, regex, opencv-python, natsort, joblib, nltk, fire\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8/8\u001b[0m [fire][32m6/8\u001b[0m [nltk]b]python]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed fire-0.7.1 joblib-1.5.2 lmdb-1.7.5 natsort-8.4.0 nltk-3.9.2 opencv-python-4.12.0.88 regex-2025.11.3 termcolor-3.2.0\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "/usr/bin/python3: No module named pip\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torch in ./.venv/lib/python3.12/site-packages (2.9.0)\n",
-      "Requirement already satisfied: torchvision in ./.venv/lib/python3.12/site-packages (0.24.0)\n",
-      "Requirement already satisfied: filelock in ./.venv/lib/python3.12/site-packages (from torch) (3.20.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in ./.venv/lib/python3.12/site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: setuptools in ./.venv/lib/python3.12/site-packages (from torch) (80.9.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in ./.venv/lib/python3.12/site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in ./.venv/lib/python3.12/site-packages (from torch) (3.5)\n",
-      "Requirement already satisfied: jinja2 in ./.venv/lib/python3.12/site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: fsspec>=0.8.5 in ./.venv/lib/python3.12/site-packages (from torch) (2025.9.0)\n",
-      "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (from torchvision) (2.2.6)\n",
-      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in ./.venv/lib/python3.12/site-packages (from torchvision) (12.0.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in ./.venv/lib/python3.12/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.12/site-packages (from jinja2->torch) (3.0.3)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m25.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.3\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "/usr/bin/python3: No module named pip\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -93,10 +45,11 @@
    "source": [
     "# Install required packages\n",
     "%pip install lmdb pillow nltk natsort fire opencv-python\n",
+    "\n",
     "# For Nvidia GPU support\n",
-    "# %pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130\n",
+    "%pip install torch torchvision --index-url https://download.pytorch.org/whl/cu130\n",
     "# If no GPU, use the following instead\n",
-    "%pip install torch torchvision"
+    "# %pip install torch torchvision"
    ]
   },
   {
@@ -160,7 +113,8 @@
    "metadata": {},
    "source": [
     "## 3.2 Get the Chinese character\n",
-    "The Chinese characters can be found in Eazyocr repository: https://github.com/JaidedAI/EasyOCR/blob/master/easyocr/config.py"
+    "The Chinese characters can be found in Eazyocr repository: https://github.com/JaidedAI/EasyOCR/blob/master/easyocr/config.py\n",
+    "\n"
    ]
   },
   {
@@ -182,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a9e0f6a6",
    "metadata": {},
    "outputs": [
@@ -201,8 +155,6 @@
       "sub-directory:\t/.\t num samples: 156320\n",
       "num total samples of /: 156320 x 1.0 (total_data_usage_ratio) = 156320\n",
       "num samples of / per batch: 192 x 1.0 (batch_ratio) = 192\n",
-      "/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py:692: UserWarning: 'pin_memory' argument is set as true but not supported on MPS now, device pinned memory won't be used.\n",
-      "  warnings.warn(warn_msg)\n",
       "--------------------------------------------------------------------------------\n",
       "Total_batch_size: 192 = 192\n",
       "--------------------------------------------------------------------------------\n",
@@ -284,29 +236,32 @@
       ")\n",
       "Trainable params num :  19457261\n",
       "Optimizer:\n",
-      "Adadelta (\n",
+      "Adam (\n",
       "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
       "    capturable: False\n",
+      "    decoupled_weight_decay: False\n",
       "    differentiable: False\n",
       "    eps: 1e-08\n",
       "    foreach: None\n",
+      "    fused: None\n",
       "    lr: 1\n",
       "    maximize: False\n",
-      "    rho: 0.95\n",
       "    weight_decay: 0\n",
       ")\n",
       "------------ Options -------------\n",
-      "exp_name: TPS-VGG-BiLSTM-CTC-Seed1111\n",
+      "exp_name: TPS-VGG-BiLSTM-CTC-Seed1111-20251118-192732\n",
       "train_data: dataset/priyank-m/trdg_random_en_zh_text_recognition/training\n",
       "valid_data: dataset/step3/validation\n",
       "manualSeed: 1111\n",
-      "workers: 0\n",
+      "workers: 8\n",
       "batch_size: 192\n",
-      "num_iter: 300000\n",
+      "num_iter: 150000\n",
       "valInterval: 2000\n",
       "saved_model: pre_trained_models/chinese.pth\n",
       "FT: True\n",
-      "adam: False\n",
+      "adam: True\n",
       "lr: 1\n",
       "beta1: 0.9\n",
       "rho: 0.95\n",
@@ -332,75 +287,60 @@
       "input_channel: 1\n",
       "output_channel: 512\n",
       "hidden_size: 512\n",
-      "num_gpu: 0\n",
+      "num_gpu: 1\n",
       "num_class: 5381\n",
       "---------------------------------------\n",
       "\n",
-      "[1/300000] Train loss: 12.72956, Valid loss: 115.75256, Elapsed_time: 5.73128\n",
+      "[1/150000] Train loss: 12.36508, Valid loss: 187511.98438, Elapsed_time: 3.58392\n",
       "Current_accuracy : 0.000, Current_norm_ED  : 0.00\n",
       "Best_accuracy    : 0.000, Best_norm_ED     : 0.00\n",
       "--------------------------------------------------------------------------------\n",
       "Ground Truth              | Prediction                | Confidence Score & T/F\n",
       "--------------------------------------------------------------------------------\n",
-      "並                         |  dd                       | 0.0000\tFalse\n",
-      "雜                         |   d                       | 0.0000\tFalse\n",
-      "評                         |   dd                      | 0.0000\tFalse\n",
-      "檢                         | !ldd                      | 0.0000\tFalse\n",
-      "樓                         |  d                        | 0.0000\tFalse\n",
+      "並                         | 婦                         | 1.0000\tFalse\n",
+      "雜                         | 婦                         | 1.0000\tFalse\n",
+      "評                         | 婦                         | 1.0000\tFalse\n",
+      "檢                         | 婦                         | 1.0000\tFalse\n",
+      "樓                         | 婦                         | 1.0000\tFalse\n",
       "--------------------------------------------------------------------------------\n",
-      "^C\n",
+      "ERROR: Unexpected segmentation fault encountered in worker.\n",
+      "\u0000ERROR: Unexpected segmentation fault encountered in worker.\n",
+      "\u0000Traceback (most recent call last):\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1275, in _try_get_data\n",
+      "    data = self._data_queue.get(timeout=timeout)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/usr/lib/python3.12/queue.py\", line 180, in get\n",
+      "    self.not_empty.wait(remaining)\n",
+      "  File \"/usr/lib/python3.12/threading.py\", line 359, in wait\n",
+      "    gotit = waiter.acquire(True, timeout)\n",
+      "            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/_utils/signal_handling.py\", line 73, in handler\n",
+      "    _error_if_any_worker_fails()\n",
+      "RuntimeError: DataLoader worker (pid 6412) is killed by signal: Segmentation fault. \n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
       "Traceback (most recent call last):\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/deep-text-recognition-benchmark/train.py\", line 362, in <module>\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/deep-text-recognition-benchmark/train.py\", line 364, in <module>\n",
       "    train(opt)\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/deep-text-recognition-benchmark/train.py\", line 163, in train\n",
-      "    preds = model(image, text)\n",
-      "            ^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1775, in _wrapped_call_impl\n",
-      "    return self._call_impl(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1786, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/parallel/data_parallel.py\", line 174, in forward\n",
-      "    return self.module(*inputs, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1775, in _wrapped_call_impl\n",
-      "    return self._call_impl(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1786, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/deep-text-recognition-benchmark/model.py\", line 82, in forward\n",
-      "    contextual_feature = self.SequenceModeling(visual_feature)\n",
-      "                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1775, in _wrapped_call_impl\n",
-      "    return self._call_impl(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1786, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/container.py\", line 250, in forward\n",
-      "    input = module(input)\n",
-      "            ^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1775, in _wrapped_call_impl\n",
-      "    return self._call_impl(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1786, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/deep-text-recognition-benchmark/modules/sequence_modeling.py\", line 17, in forward\n",
-      "    recurrent, _ = self.rnn(input)  # batch_size x T x input_size -> batch_size x T x (2*hidden_size)\n",
-      "                   ^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1775, in _wrapped_call_impl\n",
-      "    return self._call_impl(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/module.py\", line 1786, in _call_impl\n",
-      "    return forward_call(*args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/wing199901/Downloads/smart-spend-ocr-workspace/.venv/lib/python3.12/site-packages/torch/nn/modules/rnn.py\", line 1127, in forward\n",
-      "    result = _VF.lstm(\n",
-      "             ^^^^^^^^^\n",
-      "KeyboardInterrupt\n"
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/deep-text-recognition-benchmark/train.py\", line 157, in train\n",
+      "    image_tensors, labels = train_dataset.get_batch()\n",
+      "                            ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/deep-text-recognition-benchmark/dataset.py\", line 94, in get_batch\n",
+      "    image, text = next(data_loader_iter)\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 732, in __next__\n",
+      "    data = self._next_data()\n",
+      "           ^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1482, in _next_data\n",
+      "    idx, data = self._get_data()\n",
+      "                ^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1434, in _get_data\n",
+      "    success, data = self._try_get_data()\n",
+      "                    ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/c/Users/wing199901/Documents/Github/ocr-workspace/.venv/lib/python3.12/site-packages/torch/utils/data/dataloader.py\", line 1288, in _try_get_data\n",
+      "    raise RuntimeError(\n",
+      "RuntimeError: DataLoader worker (pid(s) 6412) exited unexpectedly\n"
      ]
     }
    ],
@@ -409,8 +349,8 @@
     "!CUDA_VISIBLE_DEVICES='0,1'\n",
     "\n",
     "!python deep-text-recognition-benchmark/train.py \\\n",
-    "    --train_data \"dataset/priyank-m/trdg_random_en_zh_text_recognition/training\" \\\n",
-    "    --valid_data \"dataset/step3/validation\" \\\n",
+    "    --train_data \"dataset/trdg_random_en_zh_text_recognition/step3/training\" \\\n",
+    "    --valid_data \"dataset/trdg_random_en_zh_text_recognition/step3/validation\" \\\n",
     "    --select_data / \\\n",
     "    --batch_ratio 1 \\\n",
     "    --Transformation \"TPS\" \\\n",
@@ -422,13 +362,16 @@
     "    --hidden_size 512 \\\n",
     "    --saved_model \"pre_trained_models/chinese.pth\" \\\n",
     "    --FT \\\n",
-    "    --workers 0"
+    "    --workers 0 \\\n",
+    "    --adam \\\n",
+    "    --lr 1e-4 \\\n",
+    "    --num_iter 150000"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -442,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
