Update submodules and add new model checkpoints
Updated the 'dataset' and 'deep-text-recognition-benchmark' submodules to their latest commits. Added new model checkpoints, logs, and configuration files for several TPS-based models in the 'saved_models' directory. Also added new module files and made updates to 'user_network_dir/custom.py', 'custom.yaml', and workspace notebooks.

--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -135,6 +135,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43c70275",
+   "metadata": {},
+   "source": [
+    "### 3.4.1 Fine-tune from EasyOCR pre-trained model (VGG)\n",
+    "\n",
+    "Fine-tune the EasyOCR `chinese.pth` model on receipt dataset using VGG feature extractor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a9e0f6a6",
@@ -349,8 +359,8 @@
     "!CUDA_VISIBLE_DEVICES='0,1'\n",
     "\n",
     "!python deep-text-recognition-benchmark/train.py \\\n",
-    "    --train_data \"dataset/trdg_random_en_zh_text_recognition/step3/training\" \\\n",
-    "    --valid_data \"dataset/trdg_random_en_zh_text_recognition/step3/validation\" \\\n",
+    "    --train_data \"dataset/real_receipt/train\" \\\n",
+    "    --valid_data \"dataset/real_receipt/valid\" \\\n",
     "    --select_data / \\\n",
     "    --batch_ratio 1 \\\n",
     "    --Transformation \"TPS\" \\\n",
@@ -364,8 +374,50 @@
     "    --FT \\\n",
     "    --workers 0 \\\n",
     "    --adam \\\n",
-    "    --lr 1e-4 \\\n",
-    "    --num_iter 150000"
+    "    --lr 5e-5 \\\n",
+    "    --num_iter 20000\n",
+    "    --valInterval 500"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18e40104",
+   "metadata": {},
+   "source": [
+    "### 3.4.2 Train from scratch (RCNN)\n",
+    "\n",
+    "**Purpose**: Train a TPS + RCNN + BiLSTM + CTC model from scratch on receipt dataset without any pre-trained weights.\n",
+    "\n",
+    "**Dataset**: Uses `dataset/real_receipt/train` (~2700 labeled receipt line images) for training and `dataset/real_receipt/valid` for validation.\n",
+    "\n",
+    "**Model Architecture**:\n",
+    "- **Transformation**: TPS (Thin Plate Spline) for input normalization\n",
+    "- **FeatureExtraction**: RCNN (Recurrent CNN with GRCL blocks)\n",
+    "- **SequenceModeling**: BiLSTM (Bidirectional LSTM)\n",
+    "- **Prediction**: CTC (Connectionist Temporal Classification)\n",
+    "\n",
+    "**Training Settings**: Validates every 500 iterations to monitor learning progress. All hyperparameters (learning rate, channels, hidden size) use default values from the benchmark repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca7dea8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!CUDA_VISIBLE_DEVICES='0,1'\n",
+    "\n",
+    "!python deep-text-recognition-benchmark/train.py \\\n",
+    "    --train_data \"dataset/real_receipt/train\" \\\n",
+    "    --valid_data \"dataset/real_receipt/valid\" \\\n",
+    "    --select_data / \\\n",
+    "    --batch_ratio 1 \\\n",
+    "    --Transformation \"TPS\" \\\n",
+    "    --FeatureExtraction \"RCNN\" \\\n",
+    "    --SequenceModeling \"BiLSTM\" \\\n",
+    "    --Prediction \"CTC\" \\\n",
+    "    --valInterval 500"
    ]
   }
  ],
