Update model checkpoints and training logs
Removed old TPS-RCNN and TPS-VGG model checkpoints and logs, and added new checkpoints and logs for TPS-RCNN-BiLSTM-CTC-Seed1111-20251204-030551 and TPS-VGG-BiLSTM-CTC-Seed1111-20251204-032439. Updated training options to reflect new experiment settings, including optimizer, learning rate, and hidden size. Also made minor updates to workspace_step3.ipynb and workspace_step4.ipynb.

--- a/workspace_step4.ipynb
+++ b/workspace_step4.ipynb
@@ -401,7 +401,13 @@
       "TESTING WITH EASYOCR PRE-TRAINED MODEL (Baseline)\n",
       "======================================================================\n",
       "\n",
-      "filename: 'demo_image_01.jpg', confidence: 0.5216, string: '九龍青衣細山路2號美景花園平臺72號舖'\n"
+      "\n",
+      "======================================================================\n",
+      "TESTING WITH EASYOCR PRE-TRAINED MODEL (Baseline)\n",
+      "======================================================================\n",
+      "\n",
+      "filename: 'demo_image_01.jpg', confidence: 0.0148, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n",
+      "filename: 'demo_image_01.jpg', confidence: 0.0148, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n"
      ]
     }
    ],
@@ -449,27 +455,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "157d3186",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading detection model, please wait. This may take several minutes depending upon your network connection.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Loading your custom trained model...\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "======================================================================\n",
+      "TESTING WITH YOUR CUSTOM MODEL\n",
+      "======================================================================\n",
+      "\n",
+      "filename: 'demo_image_01.jpg', confidence: 0.1749, string: '終謝惠碼'\n",
       "\n",
       "======================================================================\n",
       "TESTING WITH YOUR CUSTOM MODEL\n",
       "======================================================================\n",
       "\n",
-      "\n",
-      "======================================================================\n",
-      "TESTING WITH YOUR CUSTOM MODEL\n",
-      "======================================================================\n",
-      "\n",
-      "filename: 'demo_image_01.jpg', confidence: 0.0124, string: '如湯眼飯'\n",
-      "filename: 'demo_image_01.jpg', confidence: 0.0124, string: '如湯眼飯'\n"
+      "filename: 'demo_image_01.jpg', confidence: 0.1749, string: '終謝惠碼'\n"
      ]
     }
    ],
@@ -539,8 +552,23 @@
       "🔵 EasyOCR Pre-trained Model:\n",
       "   confidence: 0.0148, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n",
       "\n",
+      "\n",
+      "================================================================================\n",
+      "SIDE-BY-SIDE COMPARISON: Pre-trained vs Custom Model\n",
+      "================================================================================\n",
+      "\n",
+      "📷 Testing: demo_image_01.jpg\n",
+      "--------------------------------------------------------------------------------\n",
+      "🔵 EasyOCR Pre-trained Model:\n",
+      "   confidence: 0.0148, string: '九龍青衣紐山路2號美景花園平壼72號舖'\n",
+      "\n",
       "🟢 Your Custom Model:\n",
-      "   confidence: 0.0356, string: 't  l $謳'\n",
+      "   confidence: 0.0400, string: '促惠惠惠韓袋'\n",
+      "\n",
+      "================================================================================\n",
+      "\n",
+      "🟢 Your Custom Model:\n",
+      "   confidence: 0.0400, string: '促惠惠惠韓袋'\n",
       "\n",
       "================================================================================\n",
       "\n"
