--- a/workspace_step3.ipynb
+++ b/workspace_step3.ipynb
@@ -361,6 +361,7 @@
     "!python deep-text-recognition-benchmark/train.py \\\n",
     "    --train_data \"dataset/real_receipt/train\" \\\n",
     "    --valid_data \"dataset/real_receipt/valid\" \\\n",
+    "    --workers 0 \\\n",
     "    --num_iter 20000 \\\n",
     "    --valInterval 500 \\\n",
     "    --saved_model \"pre_trained_models/chinese.pth\" \\\n",
@@ -410,7 +411,8 @@
     "!python deep-text-recognition-benchmark/train.py \\\n",
     "    --train_data \"dataset/real_receipt/train\" \\\n",
     "    --valid_data \"dataset/real_receipt/valid\" \\\n",
-    "    --num_iter 20000 \\\n",
+    "    --workers 0 \\\n",
+    "    --num_iter 5000 \\\n",
     "    --valInterval 500 \\\n",
     "    --adam \\\n",
     "    --lr 1e-3 \\\n",
